--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>lockpickingapp</name>
 	<description>Demo project for Spring Boot</description>
-	<properties>
+<!--	<properties>
 		<java.version>17</java.version>
 	</properties>
+-->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
