--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>lockpickingapp</name>
 	<description>Demo project for Spring Boot</description>
-<!--	<properties>
+	<!--	<properties>
 		<java.version>17</java.version>
 	</properties>
 -->
@@ -42,9 +42,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-			<version>2.7.0</version>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring5</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -55,6 +58,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+
 	</dependencies>
 	<distributionManagement>
 		<repository>
